--- a/QuizApp/QuizApp.WASM/_Imports.razor
+++ b/QuizApp/QuizApp.WASM/_Imports.razor
@@ -6,5 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using QuizAppWasm
-@using QuizAppWasm.Layout
+@using QuizApp.BlazorWASM
+@using QuizApp.BlazorWASM.Layout
+@using QuizApp.BlazorWASM.Services
+@using QuizApp.Models
+
