configured https for api

--- a/QuizApp/QuizApp.WASM/App.razor
+++ b/QuizApp/QuizApp.WASM/App.razor
@@ -10,3 +10,17 @@
         </LayoutView>
     </NotFound>
 </Router>
+
+@code{
+
+    [Inject]
+    private NavigationManager? NavigationManager { get; set; }
+    protected override void OnInitialized()
+    {
+        if (NavigationManager!.Uri.StartsWith("http://"))
+        {
+            NavigationManager.NavigateTo("https://" + NavigationManager.Uri.Substring(7));
+            return;
+        }
+    }
+}
