--- a/QuizApp/QuizApp.WASM/Layout/MainLayout.razor
+++ b/QuizApp/QuizApp.WASM/Layout/MainLayout.razor
@@ -1,2 +1,23 @@
 ﻿@inherits LayoutComponentBase
-@Body
+@* Required *@
+<MudThemeProvider />
+<MudPopoverProvider />
+
+@* Needed for dialogs *@
+<MudDialogProvider />
+
+@* Needed for snackbars *@
+<MudSnackbarProvider />
+<MudLayout>
+    <MudAppBar>
+        <MudText Typo="Typo.h5"
+                 Class="ml-3">Exams Application</MudText>
+        <MudSpacer />
+        <MudIconButton Icon="@Icons.Material.Filled.MoreVert"
+                       Color="Color.Inherit"
+                       Edge="Edge.End" />
+    </MudAppBar>
+    <MudMainContent>
+        @Body
+    </MudMainContent>
+</MudLayout>
