--- a/QuizApp/QuizApp.WASM/Pages/Home.razor
+++ b/QuizApp/QuizApp.WASM/Pages/Home.razor
@@ -2,9 +2,9 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<MudText Typo="Typo.h4">
+    Select Exam:
+</MudText>
 @if(Exams is null)
 {
     <p>Loading</p>
@@ -13,7 +13,11 @@ else
 {
     @foreach (var item in Exams)
     {
-        <p>@item.id</p>
+        <MudNavLink
+            Href="@($"Exams/{item.id}")"
+            >
+            @item.id
+        </MudNavLink>
     }
 }
 
