--- a/QuizApp/QuizApp.WASM/Layout/MainLayout.razor
+++ b/QuizApp/QuizApp.WASM/Layout/MainLayout.razor
@@ -1,23 +1,25 @@
 ﻿@inherits LayoutComponentBase
 @* Required *@
-<MudThemeProvider />
-<MudPopoverProvider />
+<MudRTLProvider>
+    <MudThemeProvider />
+    <MudPopoverProvider />
 
-@* Needed for dialogs *@
-<MudDialogProvider />
+    @* Needed for dialogs *@
+    <MudDialogProvider />
 
-@* Needed for snackbars *@
-<MudSnackbarProvider />
-<MudLayout>
-    <MudAppBar>
-        <MudText Typo="Typo.h5"
-                 Class="ml-3">Exams Application</MudText>
-        <MudSpacer />
-        <MudIconButton Icon="@Icons.Material.Filled.MoreVert"
-                       Color="Color.Inherit"
-                       Edge="Edge.End" />
-    </MudAppBar>
-    <MudMainContent>
-        @Body
-    </MudMainContent>
-</MudLayout>
+    @* Needed for snackbars *@
+    <MudSnackbarProvider />
+    <MudLayout>
+        <MudAppBar>
+            <MudText Typo="Typo.h5"
+                     Class="ml-3">Exams Application</MudText>
+            <MudSpacer />
+            <MudIconButton Icon="@Icons.Material.Filled.MoreVert"
+                           Color="Color.Inherit"
+                           Edge="Edge.End" />
+        </MudAppBar>
+        <MudMainContent>
+            @Body
+        </MudMainContent>
+    </MudLayout>
+</MudRTLProvider>
