--- a/QuizApp/QuizApp.WASM/Pages/QuestionView.razor
+++ b/QuizApp/QuizApp.WASM/Pages/QuestionView.razor
@@ -1,13 +1,12 @@
 ﻿
-<MudPaper Class="p-4 mx-auto" Style="max-width: 600px;"
+<MudPaper Class="ma-3 mx-auto" Style="max-width: 100vh;"
           dir="@(IsArabic(Question.QuestionText) ? "rtl" : "ltr")">
     <!-- Flex layout for question number + text -->
     <MudStack Row="true" Justify="Justify.FlexStart" Class="mb-4">
-        <MudText Typo="Typo.overline" Color="Color.Primary" Class="me-2">
+        <MudText Typo="Typo.inherit" Color="Color.Primary" Class="me-2">
             @QuestionNumber.
         </MudText>
-        <MudText Typo="Typo.h5"
-                 >
+        <MudText Typo="Typo.h4">
             @Question.QuestionText
         </MudText>
     </MudStack>
@@ -21,14 +20,14 @@
         Dense="true" Hover="true">
         @foreach (var choice in Question.Choices)
         {
-            <MudListItem Class="d-flex align-items-center"
+            <MudListItem Class="d-flex align-items-center question-choice"
                         Value="choice"
                          Style="cursor: pointer;"
                         >
 
                 <!-- Circle icon or bullet -->
                 <MudStack Row="true">
-                    <MudText Typo="Typo.body1"
+                    <MudText Typo="Typo.h6"
                     >@choice</MudText>
                 </MudStack>
 
