--- a/QuizApp/QuizApp.WASM/Pages/SubmissionNameForm.razor
+++ b/QuizApp/QuizApp.WASM/Pages/SubmissionNameForm.razor
@@ -1,4 +1,4 @@
-﻿
+﻿@page "/submissions/{id}"
 
 <div class="vh-100 w-100 d-flex justify-content-center align-items-center">
     <div class="input-group" style="max-width:50%">
@@ -8,14 +8,22 @@
             ErrorText="Name is required"
             T="string" @bind-Value="Name" Label="Please Write your Name" />
         <MudButton Class="btn btn-primary ma-2"
+            OnClick="OnClick"
             Disabled = "string.IsNullOrEmpty(Name)">Submit</MudButton>
     </div>
 </div>
 
  @code {
     [Parameter]
+    public string Id { get; set; } = string.Empty;
+    [Parameter]
     public string Name { get; set; } = string.Empty;
-
+    [Inject]
+    public NavigationManager NavigationManager { get; set; } = null!;
+    private void OnClick()
+    {
+        NavigationManager.NavigateTo($"/Exams/{Id}?submissionName={Name}");
+    }
     [Parameter]
     public EventCallback<string> NameChanged { get; set; }
 }
